--- a/langair.html
+++ b/langair.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="docs/css/master.css">
     <link rel="stylesheet" href="script/@fortawesome/fontawesome-free/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Prompt&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
     <link href="script/aos/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
     <header class="container-fluid border-bottom bg-custom" data-aos="fade-down" data-aos-duration="1000">
-        <div class="container">
+        <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#"><img src="docs/images/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -47,7 +48,7 @@
         </div>
     </header>
 
-    <article class="container">
+    <article class="container-fluid">
         <section class="m-4" data-aos="fade-up" data-aos-duration="1000">
             <div class="bd-example">
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -143,6 +144,74 @@
                 </div>
             </div>
         </section>
+        <section class="content-section m-4 " data-aos="fade-up" data-aos-duration="1500">
+            <!-- ทำให้รูปเลื่อนได้ -->
+            <h1 class="text-center" data-aos="zoom-in-up" data-aos-duration="1000"><strong>ผลงานของเรา</strong></h1>
+            <div class="tz-gallery gallery">
+                <div class="card-columns" data-aos="zoom-in-up" data-aos-duration="1000">
+                    <div class="card">
+                        <div class="content-overlay"></div>
+                        <a href="docs/images/img1.jpg" target="_blank">
+                            <img src="docs/images/img1.jpg" alt="Title Name" class="content-image card-img-top">
+                            <div class="content-details fadeIn-bottom">
+                                <h3 class="content-title">ติดต่อเรา</h3>
+                                <p class="content-text">081-548xxx</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <div class="content-overlay"></div>
+                        <a href="docs/images/img2.jpg" target="_blank">
+                            <img src="docs/images/img2.jpg" alt="Title Name" class="content-image card-img-top">
+                            <div class="content-details fadeIn-bottom">
+                                <h3 class="content-title">ติดต่อเรา</h3>
+                                <p class="content-text">081-548xxx</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <div class="content-overlay"></div>
+                        <a href="docs/images/img1.jpg" target="_blank">
+                            <img src="docs/images/img1.jpg" alt="Title Name" class="content-image card-img-top">
+                            <div class="content-details fadeIn-bottom">
+                                <h3 class="content-title">ติดต่อเรา</h3>
+                                <p class="content-text">081-548xxx</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <div class="content-overlay"></div>
+                        <a href="docs/images/img1.jpg" target="_blank">
+                            <img src="docs/images/img1.jpg" alt="Title Name" class="content-image card-img-top">
+                            <div class="content-details fadeIn-bottom">
+                                <h3 class="content-title">ติดต่อเรา</h3>
+                                <p class="content-text">081-548xxx</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <div class="content-overlay"></div>
+                        <a href="docs/images/img2.jpg" target="_blank">
+                            <img src="docs/images/img2.jpg" alt="Title Name" class="content-image card-img-top">
+                            <div class="content-details fadeIn-bottom">
+                                <h3 class="content-title">ติดต่อเรา</h3>
+                                <p class="content-text">081-548xxx</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <div class="content-overlay"></div>
+                        <a href="docs/images/img1.jpg" target="_blank">
+                            <img src="docs/images/img1.jpg" alt="Title Name" class="content-image card-img-top">
+                            <div class="content-details fadeIn-bottom">
+                                <h3 class="content-title">ติดต่อเรา</h3>
+                                <p class="content-text">081-548xxx</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
         
     </article>
 
@@ -174,11 +243,12 @@
     <script src="script/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="script/popper.js/dist/umd/popper.min.js"></script>
     <script src="script/aos/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
 
     <script>
         $(function () {
             AOS.init();
-
+            baguetteBox.run('.tz-gallery');
             $('.btn-top').on('click', function () {
                 $('html, body').animate({ scrollTop: 0 }, 1000);
             });
