--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link href="script/aos/dist/aos.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="container-fluid">
     <header class="container-fluid border-bottom bg-custom" data-aos="fade-down" data-aos-duration="1000">
-        <div class="container">
+        
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#"><img src="docs/images/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -44,10 +44,10 @@
                     </ul>
                 </div>
             </nav>
-        </div>
+        
     </header>
 
-    <article class="container">
+    <article class="">
         <section class="m-4" data-aos="fade-up" data-aos-duration="1000">
             <div class="bd-example">
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
