--- a/setupair.html
+++ b/setupair.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="container-fluid border-bottom bg-custom" data-aos="fade-down" data-aos-duration="1000">
-        <div class="container">
+        <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#"><img src="docs/images/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -48,7 +48,7 @@
         </div>
     </header>
 
-    <article class="container">
+    <article class="container-fluid">
         <section class="m-4" data-aos="fade-up" data-aos-duration="1000">
             <div class="bd-example">
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
